Misc/Deployments/YAMLs/DEV/elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-deploy
  namespace: yomoney-poc-dev
spec:
  selector:
      matchLabels:
        app: elastic-pod
  replicas: 1
  template:
      metadata:
        labels:
          app: elastic-pod
      spec:
        containers:
        - name: elastic-app
          image: yomoneyacr.azurecr.io/elasticsearch:5.6.3
          imagePullPolicy: IfNotPresent          
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
          - containerPort: 9200
          - containerPort: 9300
          volumeMounts:
          - name: esdata56
            mountPath: /usr/share/elasticsearch/data
        imagePullSecrets:
        - name: yomoney-poc-secret
        nodeSelector:
          agentpool: yomoneypool
        volumes:
        - name: esdata56          
          azureFile:
            shareName: yomoney-poc-elastic-fs
            secretName: yomoney-storage-secret
