Misc/Deployments/YAMLs/DEV/unomi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unomi-deploy
  namespace: yomoney-poc-dev
spec:
  selector:
      matchLabels:
        app: unomi-pod
  replicas: 1
  template:
      metadata:
        labels:
          app: unomi-pod
      spec:
        containers:
        - name: unomi-app
          image: yomoneyacr.azurecr.io/unomi:1.4.0
          imagePullPolicy: IfNotPresent          
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
          - containerPort: 8181
          - containerPort: 9443
        imagePullSecrets:
          - name: yomoney-poc-secret
        nodeSelector:
          agentpool: yomoneypool
