Misc/Deployments/YAMLs/DEV/unomi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unomi-service
  namespace: yomoney-poc-dev
spec:
  selector:
    app: unomi-pod
  ports:
  - port: 8181
    targetPort: 8181
    name: unomi-port1
  - port: 9443
    targetPort: 9443
    name: unomi-port2
  type: ClusterIP
